# autonomous-unicycle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
autonomy/: CMakeLists.txt
autonomy/include/autonomy/control/: model_f_euler_dis.hpp  position_controller.hpp
autonomy/include/autonomy/data_types/: matrix.hpp  pose2d.hpp
autonomy/include/autonomy/planning/: a_star.hpp
autonomy/src/control/: model_f_euler_dis.cpp  position_controller.cpp
autonomy/src/planning/: a_star.cpp
autonomy/test/: CMakeLists.txt  test_matrix.cpp  test_model.cpp  test_planner.cpp  test_pos_ctrl_multithread.cpp  test_position_controller.cpp
dockerfolder/: Dockerfile  Dockerfile_ros2  build.sh  mac_build.sh  mac_run.sh  run.sh
include/: matrix.hpp  vel_commands.hpp
include/control/: model_f_euler_dis.hpp
include/motion_planning/: a_star.hpp
include/planning/: a_star.hpp
include/position_ctrl/: position_controller.hpp
ros_autonomy/: CMakeLists.txt  main.cpp
src/control/: model_f_euler_dis.cpp  position_controller.cpp
src/motion_planning/: a_star.cpp
src/planning/: a_star.cpp
src/position_ctrl/: model_f_euler_dis.cpp  position_controller.cpp
test/: CMakeLists.txt  test_matrix.cpp  test_model.cpp  test_planner.cpp  test_position_controller.cpp
